--- a/src/BlazorPwa.Client/wwwroot/index.html
+++ b/src/BlazorPwa.Client/wwwroot/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>BlazorPwa.Client</title>
+    <title>BlazorPwa</title>
     <base href="/BlazorPwa/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
+    <link href="favicon.ico" rel="icon" />
 </head>
 
 <body>
